--- a/client/styles.css
+++ b/client/styles.css
@@ -7,6 +7,46 @@ body {
     /* background: #0e0e44 !important; */
 }
 
+.pulsing
+{
+     animation: pulse 1s infinite;
+     /* animation: shadow-pulse 1s infinite; */
+     border-radius: 5%;
+}
+
+
+
+@keyframes shadow-pulse
+{
+     0% {
+        box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+     }
+     100% {
+        box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+     }
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+
+
+
 .checkin_header {
     font-size: 4em !important;
 }
@@ -32,11 +72,11 @@ body {
 
 .zoom{
     transition: transform .1s; /* Animation */
-    box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important;
+    /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .zoom:hover {
     /* filter: drop-shadow(0px 0px 5px rgba(250,250,250,.5)) !important; */
-    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.3) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .checking_in_area {
@@ -49,7 +89,8 @@ body {
 .accordion {
     border-radius: 10px !important;
     /* opacity: .8 !important; */
-    background-color: rgba(250,250,250,.6) !important;
+    padding:5px !important;
+    background-color: rgba(250,250,250,.8) !important;
 }
 
 /* .menu .item {
@@ -150,10 +191,21 @@ body {
 .checkin_banner {
     background-attachment: fixed !important;
     position: absolute !important;
+    max-height: 1000px !important;
     /* top:0px; */
     opacity: 0.4;
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+}
+
+/* body::selection{
+    box-shadow: 0 5px 5px 2px red !important;
+} */
+
+
+.result:hover{
+    box-shadow: inset 0 0 10px 5px rgba(200,200,200,0.5), inset 0 2px 1px 1px rgba(255,255,255,0.9), inset 0 -2px 1px 0 rgba(200,200,200,0.5) !important;
+    cursor: pointer !important;
 }
 
 .grgold {
@@ -206,10 +258,13 @@ input.username_search{
 .button, .segment, .label{
     /* -webkit-border-radius: 5px !important; */
     /* -moz-border-radius: 5px !important; */
-    opacity:.8 !important;
-    border-radius: 15px !important;
+    opacity:.9 !important;
+    border-radius: 20px !important;
 }
 
+/* .segment {
+    padding:40px!important;
+} */
 
 .button {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
@@ -285,6 +340,23 @@ input.username_search{
 }
 .global_container {
     padding-left:10px !important;
+}
+
+.spinning{
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
 }
 
 @keyframes fadein {
