--- a/client/fields.jade
+++ b/client/fields.jade
@@ -74,13 +74,13 @@ template(name='icon_view')
 
 
 template(name='i')
-    img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
 template(name='ismall')
-    img(src="https://img.icons8.com/office/24/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/office/24/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
 
 template(name='iblue')
     img(src="https://img.icons8.com/ultraviolet/40/000000/#{name}.png" class=classes)
