--- a/client/styles.css
+++ b/client/styles.css
@@ -10,13 +10,12 @@ body {
 .pulsing
 {
      animation: pulse 1s infinite;
-     /* animation: shadow-pulse 1s infinite; */
      border-radius: 5%;
 }
 
 
 
-@keyframes shadow-pulse
+/* @keyframes shadow-pulse
 {
      0% {
         box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
@@ -24,22 +23,22 @@ body {
      100% {
         box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
      }
-}
+} */
 
 
 @keyframes pulse {
     0% {
-        transform: scale(0.95);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+        transform: scale(0.8);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
     }
 
     70% {
-        transform: scale(1);
+        transform: scale(1.3);
         box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
     }
 
     100% {
-        transform: scale(0.95);
+        transform: scale(0.8);
         box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
 }
@@ -51,14 +50,14 @@ body {
     font-size: 4em !important;
 }
 .menu > .item {
-    border-radius:20px !important;
+    border-radius:10px !important;
 }
 #topnav {
     border-radius: 0px 0px 20px 20px !important;
 }
 
 .menu {
-    border-radius: 20px !important;
+    border-radius: 10px !important;
 }
 
 .card {
@@ -76,7 +75,7 @@ body {
 }
 .zoom:hover {
     /* filter: drop-shadow(0px 0px 5px rgba(250,250,250,.5)) !important; */
-    transform: scale(1.3) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .checking_in_area {
@@ -193,7 +192,7 @@ body {
     position: absolute !important;
     max-height: 1000px !important;
     /* top:0px; */
-    opacity: 0.4;
+    opacity: 0.2;
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
